--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <center>
                 <h1>Mumbai</h1>
                 <p>
-                    The city's history dates back to around 890 CE, as found in a stone inscription found at the Nageshwara Temple in Begur, Bangalore.
-                    In 1537 CE, Kempé Gowdā, a feudal ruler under the Vijayanagara Empire, established a mud fort, considered the foundation of modern
-                    Bangalore and its oldest areas, or pétés, which still exist. After the fall of the Vijayanagara Empire, Kempe Gowda declared
-                    independence; in 1638, a large Adil Shahi Bijapur army defeated Kempe Gowda III, and Bangalore was came under Shahaji Bhonsle as a
-                    jagir which later became his capital. 
+                    Mumbai (formerly called Bombay) is a densely populated city on India’s west coast. A financial center, it's India's largest
+                    city. On the Mumbai Harbour waterfront stands the iconic Gateway of India stone arch, built by the British Raj in 1924.
+                    Mumbai is the financial, commercial,and the entertainment capital of India. It is also one of the world's top ten centres
+                    of commerce in terms of global financial flow, generating 6.16% of India's GDP, and accounting for 25% of industrial output,
+                    70% of maritime trade in India and 70% of capital transactions to India's economy.
                 </p>
                 <img 
                     src="C:\Users\DELL\Desktop\ED MAY INTERN\mumbai.jpg"
@@ -61,11 +61,9 @@
             <center>
                 <h1>Delhi</h1>
                 <p>
-                    The city's history dates back to around 890 CE, as found in a stone inscription found at the Nageshwara Temple in Begur, Bangalore.
-                    In 1537 CE, Kempé Gowdā, a feudal ruler under the Vijayanagara Empire, established a mud fort, considered the foundation of modern
-                    Bangalore and its oldest areas, or pétés, which still exist. After the fall of the Vijayanagara Empire, Kempe Gowda declared
-                    independence; in 1638, a large Adil Shahi Bijapur army defeated Kempe Gowda III, and Bangalore was came under Shahaji Bhonsle as a
-                    jagir which later became his capital. 
+                    Delhi, India’s capital territory, is a massive metropolitan area in the country’s north. In Old Delhi, a neighborhood dating to
+                    the 1600s, stands the imposing Mughal-era Red Fort, a symbol of India, and the sprawling Jama Masjid mosque, whose courtyard
+                    accommodates 25,000 people. 
                 </p>
                 <figure>
                     <img 
